--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
+/src/main/resources/natives/
 
 ### IntelliJ IDEA ###
 .idea
