--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "third_party/nanodbc"]
 	path = third_party/nanodbc
-	url = https://github.com/nanodbc/nanodbc.git
+	url = https://github.com/Michael1297/nanodbc.git
 [submodule "third_party/spdlog"]
 	path = third_party/spdlog
 	url = https://github.com/gabime/spdlog.git
