--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,23 +1,29 @@
 cmake_minimum_required(VERSION 3.20)
 project(nanodbc4j CXX)
 
-# Настройка Runtime Library (MT/MD)
+set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+
 if(MSVC)
     set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Release>:Release>")
     set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
 endif()
 
-set(CMAKE_CXX_STANDARD 23)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
+if(CMAKE_BUILD_TYPE STREQUAL "MinSizeRel" OR CMAKE_BUILD_TYPE STREQUAL "Release")
+    set(CMAKE_INTERPROCEDURAL_OPTIMIZATION TRUE)    #link time optimization
+endif()
 
 set(INCLUDE_DIR ${CMAKE_SOURCE_DIR}/cpp/include)
 set(SOURCE_DIR ${CMAKE_SOURCE_DIR}/cpp/src)
 
-# Отключаем создание импортной библиотеки .dll.a
-set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)  # Автоматический экспорт символов
-set(CMAKE_GNUtoMS ON)                     # Игнорировать .dll.a (только для MinGW)
+if(WIN32)
+    set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
+endif()
 
-# Настройки для nanodbc
+if(UNIX AND NOT APPLE)
+    set(CMAKE_POSITION_INDEPENDENT_CODE ON)
+endif()
+
 set(NANODBC_DISABLE_INSTALL ON)
 set(NANODBC_ENABLE_SHARED OFF)
 set(NANODBC_ENABLE_UNICODE ON)
@@ -25,13 +31,13 @@ set(NANODBC_DISABLE_EXAMPLES ON)
 set(NANODBC_DISABLE_TESTS ON)
 set(NANODBC_FORCE_LIBCXX  ON)
 set(THREADS_PREFER_PTHREAD_FLAG ON)
-
-add_definitions(-DSPDLOG_WCHAR_TO_UTF8_SUPPORT)
+set(SPDLOG_FMT_EXTERNAL ON)
 
 find_package(Threads REQUIRED)
 find_package(ODBC REQUIRED)
 
 add_subdirectory(third_party/nanodbc)
+add_subdirectory(third_party/fmt)
 add_subdirectory(third_party/spdlog)
 
 # Ищем все исходники в src/
@@ -43,11 +49,11 @@ add_library(${PROJECT_NAME} SHARED ${SRC_FILES})
 # Подключаем заголовочные файлы проекта
 target_include_directories(${PROJECT_NAME} PRIVATE ${INCLUDE_DIR})
 
-# Определяем ODBC_EXPORTS только при сборке библиотеки
-target_compile_definitions(${PROJECT_NAME} PRIVATE ODBC_EXPORTS)
-
-# Отключаем min max в windows.h
-target_compile_definitions(${PROJECT_NAME} PRIVATE NOMINMAX)
+if(WIN32)
+    target_compile_definitions(${PROJECT_NAME} PRIVATE ODBC_EXPORTS)
+    target_compile_definitions(${PROJECT_NAME} PRIVATE NOMINMAX)
+    add_definitions(-DSPDLOG_WCHAR_TO_UTF8_SUPPORT)
+endif()
 
 # Отключаем вывод имени файла и номера строки в исключениях nanodbc
 target_compile_definitions(nanodbc PRIVATE NANODBC_THROW_NO_SOURCE_LOCATION)
@@ -59,8 +65,16 @@ target_include_directories(utfcpp INTERFACE third_party/utfcpp/source)
 # Линкуем зависимости
 target_link_libraries(${PROJECT_NAME} PRIVATE 
     nanodbc 
-    spdlog::spdlog
+    fmt::fmt
+    spdlog::spdlog_header_only
     ODBC::ODBC 
     Threads::Threads
     utfcpp
 )
+
+if(UNIX AND NOT APPLE)
+    find_library(LIBDL dl)
+    if(LIBDL)
+        target_link_libraries(${PROJECT_NAME} PRIVATE ${LIBDL})
+    endif()
+endif()
