add logger formater

--- a/src/main/resources/logging.properties
+++ b/src/main/resources/logging.properties
@@ -1,19 +1,27 @@
-# Использование
+# Usage:
 # -Djava.util.logging.config.file=src/main/resources/logging.properties
 
-# Уровень логирования по умолчанию
+# Default logging level
 .level = ALL
 
-# Добавляем FileHandler
-handlers=java.util.logging.FileHandler
+# Add FileHandler and ConsoleHandler
+handlers=java.util.logging.FileHandler, java.util.logging.ConsoleHandler
 
-# Настройки FileHandler
+# === FileHandler  ===
+java.util.logging.FileHandler.level = ALL
 java.util.logging.FileHandler.pattern = logs/Nanodbc4J.log
 java.util.logging.FileHandler.limit = 5000000
 java.util.logging.FileHandler.count = 3
-java.util.logging.FileHandler.formatter = java.util.logging.SimpleFormatter
+java.util.logging.FileHandler.formatter = io.github.nanodbc4j.logging.EnhancedSimpleFormatter
 java.util.logging.FileHandler.append = true
 
-# Отключаем вывод в консоль для нашего класса
+# === ConsoleHandler settings  ===
+java.util.logging.ConsoleHandler.level = ALL
+java.util.logging.ConsoleHandler.formatter = io.github.nanodbc4j.logging.EnhancedSimpleFormatter
+
+# Disable console output for our class
 # com.example.MyService.useParentHandlers = false
 # com.example.MyService.level = ALL
+
+# Optional: customize format (uncomment to use)
+# java.util.logging.EnhancedSimpleFormatter.format=%1$tF %1$tT [%4$-7s] %2$s [%7$s]%n%5$s%6$s
