Add noexcept to native API functions

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,6 +28,8 @@ endif()
 set(NANODBC_DISABLE_INSTALL ON)
 set(NANODBC_ENABLE_SHARED OFF)
 set(NANODBC_ENABLE_UNICODE ON)
+set(NANODBC_ENABLE_WORKAROUND_NODATA ON)
+set(NANODBC_DISABLE_MSSQL_TVP ON)
 set(NANODBC_DISABLE_EXAMPLES ON)
 set(NANODBC_DISABLE_TESTS ON)
 set(NANODBC_FORCE_LIBCXX ON)
