--- a/pom.xml
+++ b/pom.xml
@@ -7,8 +7,10 @@
     <groupId> io.github.nanodbc4j</groupId>
     <artifactId>nanodbc4j</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
+
     <name>Nanodbc4J</name>
-    <description>JDBC driver over ODBC using nanodbc</description>
+    <description>JDBC Type 1 driver implementation using nanodbc C++ library for ODBC connectivity. Open-source replacement for the removed JDBC-ODBC Bridge.</description>
     <url>https://github.com/nanodbc4j/Nanodbc4J</url>
 
     <licenses>
@@ -30,8 +32,16 @@
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
         <jna.version>5.17.0</jna.version>
         <lombok.version>1.18.38</lombok.version>
+
+        <maven.compiler.plugin.version>3.13.0</maven.compiler.plugin.version>
+        <maven.jar.plugin.version>3.4.2</maven.jar.plugin.version>
+        <maven.source.plugin.version>3.3.1</maven.source.plugin.version>
+        <maven.javadoc.plugin.version>3.6.0</maven.javadoc.plugin.version>
+        <maven.gpg.plugin.version>3.1.0</maven.gpg.plugin.version>
+        <maven.resources.plugin.version>3.3.1</maven.resources.plugin.version>
     </properties>
 
     <dependencies>
@@ -52,12 +62,32 @@
 
     <!-- Build configuration -->
     <build>
+        <!-- Copy native libraries from lib folder -->
+        <resources>
+            <resource>
+                <directory>out/build/x64-Release</directory>
+                <includes>
+                    <include>*.dll</include>
+                </includes>
+                <targetPath>natives</targetPath>
+                <filtering>false</filtering>
+            </resource>
+            <resource>
+                <directory>out/build/WSL-GCC-Release</directory>
+                <includes>
+                    <include>*.so</include>
+                </includes>
+                <targetPath>natives</targetPath>
+                <filtering>false</filtering>
+            </resource>
+        </resources>
+
         <plugins>
             <!-- Compiler plugin: ensures Java 17 compatibility -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.13.0</version>
+                <version>${maven.compiler.plugin.version}</version>
                 <configuration>
                     <source>17</source>
                     <target>17</target>
@@ -69,7 +99,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
-                <version>3.4.2</version>
+                <version>${maven.jar.plugin.version}</version>
                 <configuration>
                     <archive>
                         <manifestEntries>
@@ -84,7 +114,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
-                <version>3.3.1</version>
+                <version>${maven.source.plugin.version}</version>
                 <executions>
                     <execution>
                         <id>attach-sources</id>
@@ -99,7 +129,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
-                <version>3.11.2</version>
+                <version>${maven.javadoc.plugin.version}</version>
                 <configuration>
                     <source>17</source>
                     <doclint>none</doclint> <!-- Disable strict HTML checks -->
@@ -112,6 +142,28 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+
+            <!-- GPG Signature -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-gpg-plugin</artifactId>
+                <version>${maven.gpg.plugin.version}</version>
+                <executions>
+                    <execution>
+                        <id>sign-artifacts</id>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>sign</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <gpgArguments>
+                        <arg>--pinentry-mode</arg>
+                        <arg>loopback</arg>
+                    </gpgArguments>
+                </configuration>
             </plugin>
         </plugins>
     </build>
