--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -133,6 +133,9 @@ jobs:
           distribution: 'adopt'
           java-version: '17'
 
+      - name: Grant execute permission for gradlew
+        run: chmod +x ./gradlew
+
       - name: Build Java library (JAR)
         run: ./gradlew clean build -i
 
