--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,7 +37,7 @@ jobs:
           $expectedHash = "A4804E4F54F42C721DF1323C5FCAC101A8C7A577E7F20979227324CEAB572D51"
           if ((Get-FileHash 'sqliteodbc_w64.exe').Hash -ne $expectedHash) {Write "Hash mismatch"; Exit 1}
           Start-Process -FilePath ".\sqliteodbc_w64.exe" -ArgumentList "/S" -Wait
-          mkdir out/build/x64-MinSizeRel
+          mkdir out/build/x64-Release
 
       - name: Install dependencies and SQLite ODBC driver (Linux)
         if: matrix.os == 'ubuntu-latest'
@@ -47,7 +47,7 @@ jobs:
         run: |
           sudo apt-get update              
           sudo apt-get install -y sqlite3 libsqlite3-dev unixodbc unixodbc-dev libsqliteodbc
-          mkdir -p out/build/WSL-GCC-MinSizeRel
+          mkdir -p out/build/WSL-GCC-Release
 
       - name: Set build directory
         id: paths
@@ -84,14 +84,14 @@ jobs:
         if: matrix.os == 'windows-latest'
         run: |
           # Adjust according to your actual DLL output location
-          cp "${{ steps.paths.outputs.build-dir }}/MinSizeRel"/*.dll out/build/x64-MinSizeRel/ || true
+          cp "${{ steps.paths.outputs.build-dir }}/x64-Release"/*.dll out/build/x64-Release/ || true
         shell: bash
 
       - name: Package native artifacts (so)
         if: matrix.os == 'ubuntu-latest'
         run: |
           # Adjust according to your actual SO output location
-          cp ${{ steps.paths.outputs.build-dir }}/*.so out/build/WSL-GCC-MinSizeRel/ || true
+          cp ${{ steps.paths.outputs.build-dir }}/*.so out/build/WSL-GCC-Release/ || true
         shell: bash
 
       - name: Upload native artifacts (dll/so)
@@ -99,8 +99,8 @@ jobs:
         with:
           name: native-binaries-${{ matrix.os }}
           path: |
-            out/build/x64-MinSizeRel/*.dll
-            out/build/WSL-GCC-MinSizeRel/*.so
+            out/build/x64-Release/*.dll
+            out/build/WSL-GCC-Release/*.so
 
   java-build:
     name: Build JAR and Run Java Tests
@@ -114,28 +114,18 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: native-binaries-windows-latest
-          path: out/build/x64-MinSizeRel
+          path: out/build/x64-Release
 
       - name: Download native Linux binaries
         uses: actions/download-artifact@v4
         with:
           name: native-binaries-ubuntu-latest
-          path: out/build/WSL-GCC-MinSizeRel
+          path: out/build/WSL-GCC-Release
 
       - name: Verify native binaries presence
         run: |
-          ls -lh out/build/x64-MinSizeRel
-          ls -lh out/build/WSL-GCC-MinSizeRel
-
-      - name: Move Windows native binaries to expected Gradle directory
-        run: |
-          mkdir -p out/build/x64-Release
-          cp out/build/x64-MinSizeRel/*.dll out/build/x64-Release/
-
-      - name: Move Linux native binaries to expected Gradle directory
-        run: |
-          mkdir -p out/build/WSL-GCC-Release
-          cp out/build/WSL-GCC-MinSizeRel/*.so out/build/WSL-GCC-Release/
+          ls -lh out/build/x64-Release
+          ls -lh out/build/WSL-GCC-Release
 
       - name: Set up JDK 17
         uses: actions/setup-java@v4
