--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -136,10 +136,10 @@ jobs:
       - name: Grant execute permission for gradlew
         run: chmod +x ./gradlew
 
-      - name: Build Java library (JAR)
-        run: ./gradlew clean build -i
+      - name: Build Java library (JAR, sources, javadoc)
+        run: ./gradlew clean assemble javadocJar sourcesJar
 
-      - name: Run Java tests
+      - name: Run Java tests (optional, do not fail job)
         run: ./gradlew test --info
         continue-on-error: true
 
