--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,6 +7,7 @@ on:
 
 jobs:
   native-build:
+    name: Build native lib
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
@@ -97,7 +98,7 @@ jobs:
           if-no-files-found: warn
 
   java-build:
-    name: Build JAR and Run Java Tests
+    name: Build JAR
     runs-on: ubuntu-latest
     needs: native-build
 
