--- a/.github/workflows/maven-release.yml
+++ b/.github/workflows/maven-release.yml
@@ -1,9 +1,9 @@
-name: Build
+name: Release to Maven Central
+
 on:
   push:
-    branches: [ "master" ]
-  pull_request:
-    branches: [ "master" ]
+    tags:
+      - "v*"
 
 jobs:
   native-build:
@@ -97,8 +97,8 @@ jobs:
           path: "${{ steps.paths.outputs.build-dir }}/libnanodbc4j.so"
           if-no-files-found: warn
 
-  java-build:
-    name: Build JAR
+  publish:
+    name: Publish JAR to Maven Central
     runs-on: ubuntu-latest
     needs: native-build
 
@@ -138,8 +138,10 @@ jobs:
         run: ./gradlew test --info
         continue-on-error: true
 
-      - name: Upload JAR Artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: nanodbc4j-jar
-          path: build/libs/*.jar
+      - name: Publish to Maven Central via Gradle
+        env:
+          OSSRH_USERNAME: ${{ secrets.OSSRH_USERNAME }}
+          OSSRH_PASSWORD: ${{ secrets.OSSRH_PASSWORD }}
+          SIGNING_KEY: ${{ secrets.SIGNING_KEY }}
+          SIGNING_PASSWORD: ${{ secrets.SIGNING_PASSWORD }}
+        run: ./gradlew publish --stacktrace
