--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,8 @@
 org.gradle.jvmargs=-Xmx1g
 
+mavenCentralPublishing=true
+signAllPublications=true
+
 jnaVersion=5.17.0
 lombokVersion=1.18.38
 assertjVersion=3.27.3
