--- a/.actrc
+++ b/.actrc
@@ -1,6 +1,6 @@
 # Act configuration file
 # Platform mappings for different runner types
--P ubuntu-latest=catthehacker/ubuntu:act-24.04
+-P ubuntu-22.04=catthehacker/ubuntu:act-22.04
 -P windows-latest=catthehacker/ubuntu:act-latest
 
 # Use large runner image for better compatibility
