--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "third_party/googletest"]
 	path = third_party/googletest
 	url = https://github.com/google/googletest.git
+[submodule "third_party/bimap"]
+	path = third_party/bimap
+	url = https://github.com/nanodbc4j/bimap.git
