--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,7 +48,7 @@ jobs:
         run: |
           sudo apt-get update              
           sudo apt-get install -y sqlite3 libsqlite3-dev unixodbc unixodbc-dev libsqliteodbc
-          mkdir -p out/build/WSL-GCC-Release
+          mkdir -p out/build/GCC-Release
 
       - name: Set build directory
         id: paths
@@ -115,12 +115,12 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: native-binaries-linux
-          path: out/build/WSL-GCC-Release
+          path: out/build/GCC-Release
 
       - name: Verify native binaries presence
         run: |
           ls -lh out/build/x64-Release
-          ls -lh out/build/WSL-GCC-Release
+          ls -lh out/build/GCC-Release
 
       - name: Set up JDK 17
         uses: actions/setup-java@v4
