--- a/CMakeSettings.json
+++ b/CMakeSettings.json
@@ -26,7 +26,7 @@
       "name": "WSL-GCC-Debug",
       "generator": "Unix Makefiles",
       "configurationType": "Debug",
-      "buildRoot": "${projectDir}\\out\\build\\${name}",
+      "buildRoot": "${projectDir}\\out\\build\\GCC-Debug",
       "installRoot": "${projectDir}\\out\\install\\${name}",
       "cmakeExecutable": "cmake",
       "cmakeCommandArgs": "",
@@ -39,7 +39,7 @@
       "name": "WSL-GCC-Release",
       "generator": "Unix Makefiles",
       "configurationType": "MinSizeRel",
-      "buildRoot": "${projectDir}\\out\\build\\${name}",
+      "buildRoot": "${projectDir}\\out\\build\\GCC-Release",
       "installRoot": "${projectDir}\\out\\install\\${name}",
       "cmakeExecutable": "cmake",
       "cmakeCommandArgs": "",
